--- a/mllpg.ui
+++ b/mllpg.ui
@@ -23,6 +23,12 @@
      <height>26</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuDatei">
+    <property name="title">
+     <string>Datei</string>
+    </property>
+   </widget>
+   <addaction name="menuDatei"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
